--- a/css/profile.css
+++ b/css/profile.css
@@ -7,6 +7,40 @@ html, body {
     height: 100%;
 }
 
+nav {
+    display: inline-block;
+    width: 100%;
+    height: 5rem;
+    background-color: #1c1b43;
+    float: left;
+    color: white;
+}
+
+span#app-name {
+    font-size: 1.5rem;
+    line-height: 5rem;
+    float: left;
+    margin-left: 2rem;
+}
+
+nav section {
+    float: right;
+    display: inline-block;
+    line-height: 100%;
+}
+
+nav section span {
+    font-size: 1rem;
+    line-height: 5rem;
+    display: inline-block;
+    margin-right: 2rem;
+}
+
+nav section span a {
+    color: white;
+    text-decoration: none;
+}
+
 aside {
     display: inline-block;
     width: 35%;
