--- a/css/profile.css
+++ b/css/profile.css
@@ -67,17 +67,24 @@ main {
 
 h1 {
     font-size: 3rem;
+    color:#471c9c;
 }
 
 h2 {
     display: inline-block;
     font-size: 1.5rem;
     margin-right: 8rem;
+    color:#471c9c;
 }
 
 h3 {
     display: inline-block;
     font-size: 1rem;
+    color:#471c9c;
+}
+
+h3 i{
+    margin-right: 1rem;
 }
 
 p {
@@ -86,7 +93,7 @@ p {
 }
 
 main > section {
-    border-top: 0.1rem #000000 solid;
+    border-top: 0.1rem #471c9c solid;
     padding-top: 2rem;
 }
 
@@ -99,4 +106,9 @@ span.label {
     font-weight: 600;
     min-width: 8rem;
     display: inline-block;
+    color:#471c9c;
+}
+
+.value {
+    color: #5a5757;
 }
